Capitalised sample fields in JSON
