# submissions-api/swagger_server/model/submissions_manifest.py
@@ -3,7 +3,7 @@ from .base import Base, db
 
 class SubmissionsManifest(Base):
     __tablename__ = "manifest"
-    manifest_id = db.Column(db.String(), primary_key=True)
+    manifest_id = db.Column(db.Integer, primary_key=True)
     samples = db.relationship('SubmissionsSample', back_populates="manifest", lazy=False)
 
     def to_dict(cls):
