# submissions-api/swagger_server/model/submissions_sample.py
@@ -3,52 +3,60 @@ from .base import Base, db
 
 class SubmissionsSample(Base):
     __tablename__ = "sample"
-    sample_id = db.Column(db.String(), primary_key=True)
-    taxonomy_id = db.Column(db.Integer, nullable=False)
-    scientific_name = db.Column(db.String(), nullable=True)
-    common_name = db.Column(db.String(), nullable=True)
+    row = db.Column(db.Integer, nullable=False)
     specimen_id = db.Column(db.String(), nullable=False)
-    biosample_id = db.Column(db.String(), nullable=True)
-    manifest_id = db.Column(db.String(), db.ForeignKey('manifest.manifest_id'))
+    sample_id = db.Column(db.Integer, primary_key=True)
+    taxonomy_id = db.Column(db.Integer, nullable=False)
+    scientific_name = db.Column(db.String(), nullable=False)
+    common_name = db.Column(db.String(), nullable=False)
+    manifest_id = db.Column(db.Integer, db.ForeignKey('manifest.manifest_id'))
     manifest = db.relationship("SubmissionsManifest", back_populates="samples",
                                uselist=False, foreign_keys=[manifest_id])
-    lifestage = db.Column(db.String(), nullable=True)
-    sex = db.Column(db.String(), nullable=True)
-    organism_part = db.Column(db.String(), nullable=True)
-    GAL = db.Column(db.String(), nullable=True)
-    GAL_sample_id = db.Column(db.String(), nullable=True)
-    collected_by = db.Column(db.String(), nullable=True)
-    collector_affiliation = db.Column(db.String(), nullable=True)
-    date_of_collection = db.Column(db.String(), nullable=True)
-    collection_location = db.Column(db.String(), nullable=True)
-    decimal_latitude = db.Column(db.String(), nullable=True)
-    decimal_longitude = db.Column(db.String(), nullable=True)
-    habitat = db.Column(db.String(), nullable=True)
-    identified_by = db.Column(db.String(), nullable=True)
-    identifier_affiliation = db.Column(db.String(), nullable=True)
-    voucher_id = db.Column(db.String(), nullable=True)
+    lifestage = db.Column(db.String(), nullable=False)
+    sex = db.Column(db.String(), nullable=False)
+    organism_part = db.Column(db.String(), nullable=False)
+    GAL = db.Column(db.String(), nullable=False)
+    GAL_sample_id = db.Column(db.String(), nullable=False)
+    collected_by = db.Column(db.String(), nullable=False)
+    collector_affiliation = db.Column(db.String(), nullable=False)
+    date_of_collection = db.Column(db.String(), nullable=False)
+    collection_location = db.Column(db.String(), nullable=False)
+    decimal_latitude = db.Column(db.String(), nullable=False)
+    decimal_longitude = db.Column(db.String(), nullable=False)
+    habitat = db.Column(db.String(), nullable=False)
+    identified_by = db.Column(db.String(), nullable=False)
+    identifier_affiliation = db.Column(db.String(), nullable=False)
+    voucher_id = db.Column(db.String(), nullable=False)
+    height = db.Column(db.String(), nullable=True)
+    depth = db.Column(db.String(), nullable=True)
+    relationship = db.Column(db.String(), nullable=True)
+
     tolid = db.Column(db.String(), nullable=True)
+    biosample_id = db.Column(db.String(), nullable=True)
 
     def to_dict(cls):
-        return {'sampleId': cls.sample_id,
-                'taxonomyId': cls.taxonomy_id,
-                'scientificName': cls.scientific_name,
-                'commonName': cls.common_name,
-                'specimenId': cls.specimen_id,
-                'biosampleId': cls.biosample_id,
-                'lifestage': cls.lifestage,
-                'sex': cls.sex,
-                'organismPart': cls.organism_part,
+        return {'row': cls.row,
+                'SPECIMEN_ID': cls.specimen_id,
+                'TAXON_ID': cls.taxonomy_id,
+                'SCIENTIFIC_NAME': cls.scientific_name,
+                'COMMON_NAME': cls.common_name,
+                'LIFESTAGE': cls.lifestage,
+                'SEX': cls.sex,
+                'ORGANISM_PART': cls.organism_part,
                 'GAL': cls.GAL,
-                'GALSampleId': cls.GAL_sample_id,
-                'collectedBy': cls.collected_by,
-                'collectorAffiliation': cls.collector_affiliation,
-                'dateOfCollection': cls.date_of_collection,
-                'collectionLocation': cls.collection_location,
-                'decimalLatitude': cls.decimal_latitude,
-                'decimalLongitude': cls.decimal_longitude,
-                'habitat': cls.habitat,
-                'identifiedBy': cls.identified_by,
-                'identifierAffiliation': cls.identifier_affiliation,
-                'voucherId': cls.voucher_id,
-                'tolId': cls.tolid}
+                'GAL_SAMPLE_ID': cls.GAL_sample_id,
+                'COLLECTED_BY': cls.collected_by,
+                'COLLECTOR_AFFILIATION': cls.collector_affiliation,
+                'DATE_OF_COLLECTION': cls.date_of_collection,
+                'COLLECTION_LOCATION': cls.collection_location,
+                'DECIMAL_LATITUDE': cls.decimal_latitude,
+                'DECIMAL_LONGITUDE': cls.decimal_longitude,
+                'HABITAT': cls.habitat,
+                'IDENTIFIED_BY': cls.identified_by,
+                'IDENTIFIER_AFFILIATION': cls.identifier_affiliation,
+                'VOUCHER_ID': cls.voucher_id,
+                'HEIGHT': cls.height,
+                'DEPTH': cls.depth,
+                'RELATIONSHIP': cls.relationship,
+                'tolId': cls.tolid,
+                'biosampleId': cls.biosample_id}
